--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -24,7 +24,7 @@ jobs:
       run: sudo apt-get -y install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
 
     - name: Compile
-      run: package/compile
+      run: cd compile && make
 
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v1
