--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -50,7 +50,7 @@ jobs:
       uses: marvinpinto/action-automatic-releases@latest
       if: env.isFinalRelease == 'true'
       with:
-        automatic_release_tag: latest-rc
+        automatic_release_tag: stable
         files: dist/runit.tar
         prerelease: false
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
